# MasterDegree

./: .transformado.pcd.swp  filtrado.pcd  toQuaternion.py  transformado.pcd
Calibração/: calibrate.py  drawcorners.py  kinect-params.txt
Kinect/: DepthtoPointCloud.py  Io-Function.py  NewDataset.py  Nuvem1.mlp  RANSAC.py  RansacBasico.py  camera.py  demo_cv2_sync.py  nuvem1.ply  nuvem1.xyz  nuvem2.ply  nuvem2.xyz  plane.py  plano.ply  pt.txt  pt.yaml  ransac3d.py  restante.ply  stereo_match.py  testingRansac.py
Kinect/Anaconda/: GetSmooth.py  principal.py  pt.yaml
Python/: 3-obstaculo.pcd  Equacoesdosplanos-filtro.txt  Equacoesdosplanos-semfiltro.txt  Lmeads.py  mapping.py
V-rep/: mapa.ttt  mapa2.ttt  plane.py  plano.ply  restante.ply  simulation.py
pcl/: 4-novo-filtrado.pcd  4vrep.pcd  Equacoesdosplanos-filtro.txt  Equacoesdosplanos-semfiltro.txt
pcl/1 - Transform View/: CMakeLists.txt  transform_from_viewpoint.cpp
pcl/10 - Concave and Convex Hull/: concave_hull_2d.cpp
pcl/11 - SuperVoxel/: supervoxel_clustering.cpp
pcl/2 - Pass Through/: passthrough.cpp
pcl/3 - Transform View/: toQuaternion.py
pcl/3 - Voxel grid/: voxel_grid.cpp
pcl/4 - Extract Indices/: extract_indices.cpp
pcl/4 - Voxel grid/: voxel_grid.cpp
pcl/5 - Pass Through/: passthrough.cpp
pcl/6 - Plane Segmentation/: planar_segmentation.cpp
pcl/7 - Extract Indices/: extract_indices.cpp
pcl/9 - cluster extraction/: cluster_extraction.cpp
pcl/Qualificacao/: CMakeLists.txt  quali.cpp
pcl/ReduceNoise/: resampling.cpp
pcl/kinect_cloud/: CMakeLists.txt  kinect_cloud.cpp
(+3 files in other folders)
